# notepad

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LoginDialog.cpp  LoginDialog.h  NotePad.pro  README.md  appsettings.cpp  appsettings.h  chartwidget.cpp  chartwidget.h  codeeditor.cpp  codeeditor.h  compilerrunner.cpp  compilerrunner.h  dataanalysiswidget.cpp  dataanalysiswidget.h  databasemanager.cpp  databasemanager.h  datamodel.cpp  datamodel.h  filebrowserwidget.cpp  filebrowserwidget.h  imagedisplaywidget.cpp  imagedisplaywidget.h  imageenhancer.cpp  imageenhancer.h  imageviewerwidget.cpp  imageviewerwidget.h  loginregisterdialog.cpp  loginregisterdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_editor.cpp  mainwindow_ui.cpp  note.h  pythonscriptrunner.cpp  (+9 more)
cmake/: ThirdParty.cmake
docs/: ENGINEERING.md
scripts/: build.ps1  clean.ps1
